todo_app/todo_frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: todo-frontend-volume
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-frontend
          image: berkturetkenwartsila/todo_frontend:0.6
          volumeMounts:
            - name: todo-frontend-volume
              mountPath: /app/files
          # configuring *all* key-value pairs in ConfigMap as (container) environment variables
