todo_app/todo_frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-frontend-svc
spec:
  # NodePort: should not be used in production
  # ClusterIP: gives the Service an internal IP address that can be acccesible within the cluster
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - name: http
      # nodePort: 30080   # the port that is available outside. Value for nodePort must be between 30000 and 32767
      protocol: TCP
      port: 2345 # the port that is available to the cluster
      targetPort: 8080 # target port
